--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
 				<div class="copyright__text">
 					<div>Copyright © 2022 ActiveBox. All Rights Reserved</div>
-					<div>Made with <img src="img/heart.ico" height="12" alt=""> <span>by Gamidov Aligadji</span></div>
+					<div>Made with <img src="img/heart.ico" height="12" alt=""> <span>by prositedeveloper</span></div>
 				</div>
 
 			</div>
